backend/manifests/overlays/development/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budgetah-backend
spec:
  template:
    spec:
      containers:
        - name: budgetah-backend
          image: harbor.sourpatch.internal.coldbrewlabs.ca/library/budgetah-backend:0.1.0-scratch-rfcurated
