backend/manifests/overlays/development/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: budgetah-backend
spec:
  hostnames:
    - budgetah-api.dev.cherryblast.internal.coldbrewlabs.ca
